# tenant_access_request_service

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: test.yml
docs/: slack-setup.md  user-guide.md
src/: __init__.py  main.py
src/core/: __init__.py  governance_client.py  slack_client.py
src/routes/: __init__.py  approvals.py  requests.py  slack.py
src/service/: __init__.py  app_state.py  arg_checkers.py  config.py  dependencies.py  exception_handlers.py  exceptions.py  http_bearer.py  kb_auth.py  models.py
tests/: conftest.py  test_main.py
tests/core/: test_governance_client.py  test_slack_client.py
tests/routes/: __init__.py  test_approvals.py  test_health.py  test_requests.py  test_slack.py
tests/service/: __init__.py  test_app_state.py  test_arg_checkers.py  test_dependencies.py  test_exception_handlers.py  test_http_bearer.py  test_kb_auth.py
