[project]
name = "tenant-access-request-service"
version = "0.1.0"
description = "Slack-based approval workflow for tenant access requests"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "fastapi==0.116.2",
    "uvicorn==0.35.0",
    "httpx==0.28.1",
    "python-dotenv==1.1.1",
    "pydantic==2.11.9",
    "aiohttp==3.12.15",
    "cacheout==0.16.0",
    "slack-sdk==3.39.0",
    "ruff==0.14.4",
]

[dependency-groups]
dev = [
    "ipython==9.5.0",
    "pytest==8.4.2",
    "pytest-cov==7.0.0",
    "pytest-asyncio==0.24.0",
    "pytest-mock==3.14.0",
    "pytest-xdist==3.5.0",
]

[tool.coverage.run]
relative_files = true
source = ["src"]

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 2
