[project]
name = "tenant-access-request-service"
version = "0.1.0"
description = "Slack-based approval workflow for tenant access requests"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "fastapi==0.124.2",
    "uvicorn==0.38.0",
    "httpx==0.28.1",
    "python-dotenv==1.2.1",
    "pydantic==2.12.5",
    "aiohttp==3.13.2",
    "cacheout==0.16.0",
    "slack-sdk==3.39.0",
    "ruff==0.14.8",
]

[dependency-groups]
dev = [
    "ipython==9.8.0",
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "pytest-asyncio==1.3.0",
    "pytest-mock==3.15.1",
    "pytest-xdist==3.8.0",
]

[tool.coverage.run]
relative_files = true
source = ["src"]

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 2
